fixed issue with stretching on landscape screens

--- a/public/css/connect-4.css
+++ b/public/css/connect-4.css
@@ -22,6 +22,6 @@ h1, p {
 #boardCanvas, #tokenCanvas {
 	border: 1px solid #000;
 	position: absolute;
-	left: 10%;
+	left: calc(50% - 450px);
 	background: transparent;
 }
